# nixos-cursor

./: .cursorignore  .gitignore  .gitignore-dev  .gitignore-public  BRANCHING_SETUP_COMPLETE.md  BRANCHING_STRATEGY.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  CURSOR_VERSION_TRACKING.md  DOCUMENTATION_AUDIT.md  FORUM_POST_RC2.md  FORUM_UPDATE_RC3.md  INTEGRATION_GUIDE.md  INTEGRATION_SUCCESS_RC3.2.md  ISSUE_1_RESOLUTION.md  KNOWN_ISSUES.md  LICENSE  MAINTENANCE_PROMPT.txt  MAINTENANCE_TASKS.md  MAKE_REPO_PUBLIC.md  MULTI_VERSION_SUCCESS.md  MULTI_WINDOW_FOCUS_SOLUTIONS.md  NIXOS_MULTI_MONITOR_VISION.md  PRE_RELEASE_READINESS.md  PROJECT_INVENTORY.md  QUICK_FIX.sh  QUICK_REFERENCE.md  RC1_RELEASE_SUMMARY.md  RC3.1_ADDITIONS.md  RC3.2_IMPLEMENTATION_PLAN.md  RC3.2_INTEGRATION_COMPLETE.md  RC3.2_RELEASE_SUMMARY.md  RC3.3_RELEASE_SUMMARY.md  RC3.4_RELEASE_SUMMARY.md  RC3_COMPLETION_SUMMARY.md  README.md  RELEASE_STRATEGY.md  RUST_NIX_BEST_PRACTICES.md  SECURITY.md  (+10 more)
.ai-workspace/: 17_cursor_cli_updates_and_build_int.md  README.md  environment.json  (+2 more)
cursor-studio-egui/: CHANGELOG.md  Cargo.toml  ENHANCEMENT_ROADMAP.md  README.md  RELEASE_PLAN.md  ROADMAP.md  WORKSPACE_TRACKING_DESIGN.md  flake.nix  home-manager-module.nix  package.nix  rebuild.nu  run.nu  run.sh
cursor-studio-egui/.cargo/: config.toml
cursor-studio-egui/examples/: d2_viewer_demo.rs
cursor-studio-egui/nix/: home-manager-module.nix
cursor-studio-egui/scripts/: capture-app.sh
cursor-studio-egui/security/: known-malicious.json
cursor-studio-egui/src/: approval.rs  database.rs  lib.rs  main.rs  security.rs  theme.rs  theme_loader.rs  vector.rs  version_registry.rs  versions.rs  workspace.rs
cursor-studio-egui/src/ai_workspace/: context.rs  environment.rs  hints.rs  memory.rs  mod.rs  plans.rs  scratchpad.rs
cursor-studio-egui/src/chat/: client.rs  conversation_browser.rs  crdt.rs  cursor_parser.rs  mod.rs  models.rs  p2p.rs  server.rs  surreal.rs  sync_service.rs
cursor-studio-egui/src/diagram/: dataflow.rs  graph.rs  layout.rs  mod.rs  parser.rs  renderer.rs  syntax.rs  theme_mapper.rs
cursor-studio-egui/src/docs/: client.rs  mod.rs  models.rs  ui.rs
cursor-studio-egui/src/modes/: config.rs  injection.rs  mod.rs  ui.rs
cursor-studio-egui/src/sync/: config.rs  cursor_db.rs  daemon.rs  external_db.rs  mod.rs  models.rs  pipe_client.rs  ui.rs  watcher.rs
scripts/python/: README.md  compute_hashes.py  cursor_context_inject.py  cursor_docs_mcp.py  cursor_sync_poc.py  pyproject.toml  sync_cursor_versions.py
scripts/python/tests/: __init__.py  conftest.py  test_context_inject.py  test_docs_mcp.py  test_sync_poc.py
scripts/rust/cursor-manager/: Cargo.toml  README.md
scripts/rust/cursor-manager/src/: cli.rs  config.rs  download.rs  instance.rs  main.rs  version.rs
tools/cursor-agent-tui/: ARCHITECTURE.md  Cargo.toml  README.md  STATUS.md  build.rs  decode_response.py  test_endpoints.py
tools/cursor-agent-tui/capture/: PROTO_SCHEMA_ANALYSIS.md  capture-cursor-realtime.sh  capture-cursor-traffic.sh  conversation_message.txt  proto-types.txt  quick-capture.sh  restart-capture.sh  stream_req_with_tools.txt  stream_resp_with_tools.txt
tools/cursor-agent-tui/proto/: aiserver.proto  test_data.json
tools/cursor-agent-tui/src/: api.rs  app.rs  auth.rs  config.rs  context.rs  error.rs  main.rs  proto.rs  state.rs  tools.rs  tui.rs
tools/cursor-agent-tui/tests/: api_test.rs  auth_test.rs
tools/cursor-dialog-daemon/: Cargo.toml  README.md  default.nix
tools/cursor-dialog-daemon/.cursor/rules/: interactive-dialogs.mdc
tools/cursor-dialog-daemon/docs/: DIALOG_ARCHITECTURE_V2.md
tools/cursor-dialog-daemon/src/: cli.rs  dbus_interface.rs  dialog.rs  gui.rs  lib.rs  main.rs  web.rs
tools/cursor-dialog-daemon/static/: index.html  manifest.json  sw.js
tools/cursor-tui/cursor-core/: Cargo.toml  build.rs
tools/cursor-tui/cursor-core/src/: auth.rs  client.rs  lib.rs
tools/proxy-test/: CERT_PINNING_BYPASS.md  CONTEXT_INJECTION_PLAN.md  FINDINGS.md  INJECTION_INTEGRATION_PLAN.md  MEMORY_PAYLOAD_SCHEMA.md  MITMPROXY_SETUP.md  NETWORK_NAMESPACE_SETUP.md  PROXY_SETUP_WORKING.md  PROXY_TESTING_STATUS.md  SCHEMA_RECONSTRUCTION.md  analyze_payloads.py  collect_payloads.sh  cp  cursor-proxy-launcher  cursor-with-full-proxy.sh  cursor-with-proxy.sh  decode_memory_payload.py  decode_protobuf.py  payload_collector.py  pf  pyproject.toml  robust_intercept_test.sh  run_test.sh  search_payloads.py  setup-network-namespace.sh  start-proxy-ns.sh  start-proxy-test.sh  test_cursor_proxy.py
tools/proxy-test/cursor-proxy/: Cargo.toml  default.nix  example-mode.toml  injection-rules.toml  injection.rs  maxim-mode.toml
tools/proxy-test/cursor-proxy/src/: injection.rs  main.rs
tools/proxy-test/payload-db/v2.0.77/metadata/: 20251217_162046_586896_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_592106_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_608176_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_625909_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_639359_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_665010_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_685369_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_701509_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_719645_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_736900_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_751809_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  20251217_162046_769931_aiserver.v1.ToolCallEventService_SubmitToolCallEvents_3b1188dc14d8.json  (+29852 more)
tools/proxy-test/payload-filter/: Cargo.toml
tools/proxy-test/payload-filter/src/: main.rs
tools/proxy-test/tests/: __init__.py  test_proxy_addon.py
(+334 files in other folders)
