[package]
name = "cursor-studio"
version = "0.2.0"
edition = "2021"
authors = ["e421"]
description = "Cursor version manager and chat library - built with egui"
license = "MIT"
rust-version = "1.75"
default-run = "cursor-studio"

[dependencies]
# GUI - egui with eframe (native + Wayland support)
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }

# Async runtime
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "process",
    "sync",
    "macros",
    "net",
    "signal",
] }
futures = "0.3"

# Server mode (REST API) - optional, for sync server
axum = { version = "0.7", features = ["json"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# P2P networking (libp2p) - optional, for P2P sync
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "yamux",
    "tcp",
    "mdns",
    "request-response",
    "macros",
    "json",
    "identify",
], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - Cursor's SQLite (read-only)
rusqlite = { version = "0.31", features = ["bundled"] }

# Database - SurrealDB for sync-capable storage (optional)
# Use kv-mem for development, kv-rocksdb for production
surrealdb = { version = "2.1", default-features = false, features = [
    "kv-mem",
    "protocol-ws",
], optional = true }

# IDs - ULIDs for sortable, unique identifiers
ulid = { version = "1.1", features = ["serde"] }

# File system
dirs = "5.0"
walkdir = "2.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"  # Fast RwLock for sync daemon
toml = "0.8"          # Config file format
regex = "1.10"
ureq = { version = "2.9", features = ["json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
hostname = "0.4"

# Version downloading (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "stream",
    "rustls-tls",
] }
futures-util = "0.3"

# Hash verification
sha2 = "0.10"
base64 = "0.22"

# Binary lookup for Nix-installed versions
which = "6.0"

# Terminal detection for approval system
atty = "0.2"

# CLI enhancements
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# Native file dialogs (cross-platform folder picker)
rfd = "0.15"

# Open files/folders in default application
open = "5.3"

[dev-dependencies]
tempfile = "3.10"

# Image loading for icons
image = { version = "0.25", default-features = false, features = ["png"] }

[[bin]]
name = "cursor-studio"
path = "src/main.rs"

[[bin]]
name = "cursor-studio-cli"
path = "src/bin/cursor_cli.rs"

[[bin]]
name = "sync-cli"
path = "src/bin/sync_cli.rs"
required-features = ["surrealdb-store"]

[[bin]]
name = "sync-server"
path = "src/bin/sync_server.rs"
required-features = ["server-sync", "surrealdb-store"]

[[bin]]
name = "p2p-sync"
path = "src/bin/p2p_sync.rs"
required-features = ["p2p-sync", "surrealdb-store"]

[lib]
name = "cursor_studio"
path = "src/lib.rs"

[features]
default = ["full"]

# Full feature set - includes all sync capabilities
full = ["p2p-sync", "server-sync", "surrealdb-store"]

# P2P sync via libp2p (adds ~3 min to build)
p2p-sync = ["dep:libp2p"]

# Server mode for sync (adds ~30s to build)
server-sync = ["dep:axum", "dep:tower-http"]

# SurrealDB storage backend (adds ~2 min to build)
surrealdb-store = ["dep:surrealdb"]

# Enable RocksDB for persistent storage (larger binary, slower compile)
persistent-db = ["surrealdb-store", "surrealdb/kv-rocksdb"]

# Minimal build - just version management and chat viewing (fastest compile)
minimal = []

# ============================================
# Build Profiles - Optimized for different use cases
# ============================================

# Development: Fast builds, some optimization for usability
[profile.dev]
opt-level = 1
debug = 1          # Minimal debug info
incremental = true # Incremental compilation

# Development with full debug
[profile.dev-debug]
inherits = "dev"
opt-level = 0
debug = 2

# Fast release: Quick to build, decent performance
[profile.release-fast]
inherits = "release"
opt-level = 2
lto = "thin"         # Faster than full LTO
codegen-units = 16   # Parallel codegen
strip = true

# Full release: Slow build, best performance (for distribution)
[profile.release]
opt-level = 3
lto = true        # Full LTO for best optimization
codegen-units = 1 # Single codegen unit for best optimization
strip = true
panic = "abort"   # Smaller binary

# ============================================
# Faster linking with mold (configured via .cargo/config.toml)
# ============================================
