[package]
name = "cursor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
dirs = "5.0"
# reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false } # Removing reqwest
http = "1.0"
bytes = "1.5"
sqlite = "0.36"

[build-dependencies]
tonic-build = "0.11"
