[package]
name = "cursor-proxy"
version = "0.2.0"
edition = "2021"
description = "Transparent HTTP/2 proxy for Cursor AI streaming interception with context injection"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP/2 support
h2 = "0.4"  # Low-level HTTP/2 for frame inspection
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }  # For generating CA certs

# Networking
socket2 = "0.5"

# Protobuf
prost = "0.13"
prost-types = "0.13"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"  # For injection config files

# Compression (for gzip in Connect protocol)
flate2 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
thiserror = "2"
anyhow = "1"
dashmap = "6"  # Concurrent hashmap for connection tracking
shellexpand = "3"
time = "0.3"
libc = "0.2"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
lto = true
codegen-units = 1
