[package]
name = "payload-filter"
version = "0.1.0"
edition = "2021"
description = "Lightning-fast Cursor API payload filter"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
walkdir = "2"
regex = "1"
memmap2 = "0.9"
fnv = "1.0"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
